bynkc/tests/fixtures/positive/35_record_construction_shorthand/input.bynk
commons test {
  type Pair = { left: Int, right: Int }

  fn make(left: Int, right: Int) -> Pair {
    Pair { left, right }
  }
}
