bynkc/tests/fixtures/negative/32_variant_wrong_arity/input.bynk
commons test {
  type Outcome =
    | Won(prize: Int, bonus: Int)
    | Draw

  fn bad() -> Outcome {
    Won(100)
  }
}
